--- a/index.html
+++ b/index.html
@@ -77,6 +77,41 @@
 				</section>
 
 				<section>
+					<h2>Why Node.js</h2>
+
+					<table style="margin:80px auto;">
+						<tbody>
+							<tr>
+								<td>L1</td>
+								<td>3 cycles</td>
+							</tr>
+							<tr>
+								<td>L2</td>
+								<td>14 cycles</td>
+							</tr>
+							<tr>
+								<td>RAM</td>
+								<td>250 cycles</td>
+							</tr>
+							<tr>
+								<td>Disk</td>
+								<td>41,000,000 cycles</td>
+							</tr>
+							<tr>
+								<td>Network</td>
+								<td>240,000,000 cycles</td>
+							</tr>
+						</tbody>
+					</table>
+					<i>Source: Ryan Dahl's 2008 node.js presentation</i>
+				</section>
+
+				<section>
+					<h3>tldr; IO on disk takes much longer than processor.</h3>
+					<p>Spend a lot of waiting!!</p>
+				</section>
+
+				<section>
 					<h2>What can you do with node.js</h2>
 
 					<ul>
